# xor-and-residual-calculation

./: README.md  data.100.raw
rust-pzip/: Cargo.toml
rust-pzip/src/: cli.yaml  encode.rs  main.rs  prediction.rs  residuals.rs  shape.rs
