[package]
name = "rust-pzip"
version = "0.1.0"
authors = ["ucyo <cayoglu@me.com>"]
edition = "2018"

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
byteorder = "1.2.7"
bit-vec = "0.4.4"
compress = { git = "https://github.com/ucyo/rust-compress", branch = "master" }
pzip-bwt = { git = "https://github.com/ucyo/pzip-bwt.git", branch = "master" }
